rdhlang5/parser/grammar/langParser.py
# Generated from lang.g4 by ANTLR 4.7.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class langParser ( Parser ):

    grammarFileName = "lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'{'", u"','", u"'}'", u"':'", u"'['", 
                     u"']'", u"'true'", u"'false'", u"'null'", u"'function'", 
                     u"'('", u"')'", u"'(|'", u"'|)'", u"'='", u"';'", u"'static'", 
                     u"'typedef'", u"'is'", u"'.'", u"'*'", u"'/'", u"'+'", 
                     u"'-'", u"'%'", u"'=='", u"'!='", u"'<'", u"'<='", 
                     u"'>'", u"'>='", u"'||'", u"'&&'", u"'?'", u"'return'", 
                     u"'continue'", u"'break'", u"'Object'", u"'Tuple'", 
                     u"'List'", u"'Function'", u"'=>'", u"'if'", u"'else'", 
                     u"'while'", u"'for'", u"'(var'", u"'from'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"STRING", u"SYMBOL", u"NUMBER", u"WS" ]

    RULE_json = 0
    RULE_obj = 1
    RULE_pair = 2
    RULE_arr = 3
    RULE_value = 4
    RULE_function = 5
    RULE_argumentDestructurings = 6
    RULE_argumentDestructuring = 7
    RULE_symbolInitialization = 8
    RULE_assignmentOrInitializationLvalue = 9
    RULE_codeBlock = 10
    RULE_destructuring = 11
    RULE_expression = 12
    RULE_objectTemplate = 13
    RULE_objectPropertyPair = 14
    RULE_objectType = 15
    RULE_objectTypePropertyPair = 16
    RULE_listTemplate = 17
    RULE_tupleType = 18
    RULE_listType = 19
    RULE_functionType = 20
    RULE_ifStatement = 21
    RULE_whileLoop = 22
    RULE_forLoop = 23

    ruleNames =  [ u"json", u"obj", u"pair", u"arr", u"value", u"function", 
                   u"argumentDestructurings", u"argumentDestructuring", 
                   u"symbolInitialization", u"assignmentOrInitializationLvalue", 
                   u"codeBlock", u"destructuring", u"expression", u"objectTemplate", 
                   u"objectPropertyPair", u"objectType", u"objectTypePropertyPair", 
                   u"listTemplate", u"tupleType", u"listType", u"functionType", 
                   u"ifStatement", u"whileLoop", u"forLoop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    STRING=49
    SYMBOL=50
    NUMBER=51
    WS=52

    def __init__(self, input, output=sys.stdout):
        super(langParser, self).__init__(input, output=output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class JsonContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.JsonContext, self).__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(langParser.ValueContext,0)


        def getRuleIndex(self):
            return langParser.RULE_json

        def enterRule(self, listener):
            if hasattr(listener, "enterJson"):
                listener.enterJson(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitJson"):
                listener.exitJson(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitJson"):
                return visitor.visitJson(self)
            else:
                return visitor.visitChildren(self)




    def json(self):

        localctx = langParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.ObjContext, self).__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.PairContext)
            else:
                return self.getTypedRuleContext(langParser.PairContext,i)


        def getRuleIndex(self):
            return langParser.RULE_obj

        def enterRule(self, listener):
            if hasattr(listener, "enterObj"):
                listener.enterObj(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitObj"):
                listener.exitObj(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitObj"):
                return visitor.visitObj(self)
            else:
                return visitor.visitChildren(self)




    def obj(self):

        localctx = langParser.ObjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_obj)
        self._la = 0 # Token type
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(langParser.T__0)
                self.state = 51
                self.pair()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==langParser.T__1:
                    self.state = 52
                    self.match(langParser.T__1)
                    self.state = 53
                    self.pair()
                    self.state = 58
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 59
                self.match(langParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.match(langParser.T__0)
                self.state = 62
                self.match(langParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.PairContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def value(self):
            return self.getTypedRuleContext(langParser.ValueContext,0)


        def getRuleIndex(self):
            return langParser.RULE_pair

        def enterRule(self, listener):
            if hasattr(listener, "enterPair"):
                listener.enterPair(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPair"):
                listener.exitPair(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPair"):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = langParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(langParser.STRING)
            self.state = 66
            self.match(langParser.T__3)
            self.state = 67
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.ArrContext, self).__init__(parent, invokingState)
            self.parser = parser

        def value(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ValueContext)
            else:
                return self.getTypedRuleContext(langParser.ValueContext,i)


        def getRuleIndex(self):
            return langParser.RULE_arr

        def enterRule(self, listener):
            if hasattr(listener, "enterArr"):
                listener.enterArr(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArr"):
                listener.exitArr(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitArr"):
                return visitor.visitArr(self)
            else:
                return visitor.visitChildren(self)




    def arr(self):

        localctx = langParser.ArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arr)
        self._la = 0 # Token type
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.match(langParser.T__4)
                self.state = 70
                self.value()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==langParser.T__1:
                    self.state = 71
                    self.match(langParser.T__1)
                    self.state = 72
                    self.value()
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 78
                self.match(langParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(langParser.T__4)
                self.state = 81
                self.match(langParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.ValueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(langParser.NUMBER, 0)

        def obj(self):
            return self.getTypedRuleContext(langParser.ObjContext,0)


        def arr(self):
            return self.getTypedRuleContext(langParser.ArrContext,0)


        def function(self):
            return self.getTypedRuleContext(langParser.FunctionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_value

        def enterRule(self, listener):
            if hasattr(listener, "enterValue"):
                listener.enterValue(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitValue"):
                listener.exitValue(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitValue"):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = langParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [langParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(langParser.STRING)
                pass
            elif token in [langParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(langParser.NUMBER)
                pass
            elif token in [langParser.T__0]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.obj()
                pass
            elif token in [langParser.T__4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.arr()
                pass
            elif token in [langParser.T__6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.match(langParser.T__6)
                pass
            elif token in [langParser.T__7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.match(langParser.T__7)
                pass
            elif token in [langParser.T__8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.match(langParser.T__8)
                pass
            elif token in [langParser.T__9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 91
                self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.FunctionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def codeBlock(self):
            return self.getTypedRuleContext(langParser.CodeBlockContext,0)


        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def argumentDestructurings(self):
            return self.getTypedRuleContext(langParser.ArgumentDestructuringsContext,0)


        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_function

        def enterRule(self, listener):
            if hasattr(listener, "enterFunction"):
                listener.enterFunction(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFunction"):
                listener.exitFunction(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFunction"):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = langParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(langParser.T__9)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==langParser.SYMBOL:
                    self.state = 95
                    self.match(langParser.SYMBOL)


                self.state = 98
                self.match(langParser.T__10)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << langParser.T__0) | (1 << langParser.T__4) | (1 << langParser.T__9) | (1 << langParser.T__10) | (1 << langParser.T__34) | (1 << langParser.T__35) | (1 << langParser.T__36) | (1 << langParser.T__37) | (1 << langParser.T__38) | (1 << langParser.T__39) | (1 << langParser.T__40) | (1 << langParser.T__42) | (1 << langParser.T__44) | (1 << langParser.T__45) | (1 << langParser.STRING) | (1 << langParser.SYMBOL) | (1 << langParser.NUMBER))) != 0):
                    self.state = 99
                    self.argumentDestructurings()


                self.state = 102
                self.match(langParser.T__11)
                self.state = 103
                self.match(langParser.T__0)
                self.state = 104
                self.codeBlock()
                self.state = 105
                self.match(langParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(langParser.T__9)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==langParser.SYMBOL:
                    self.state = 108
                    self.match(langParser.SYMBOL)


                self.state = 111
                self.match(langParser.T__12)
                self.state = 112
                self.expression(0)
                self.state = 113
                self.match(langParser.T__13)
                self.state = 114
                self.match(langParser.T__0)
                self.state = 115
                self.codeBlock()
                self.state = 116
                self.match(langParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentDestructuringsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.ArgumentDestructuringsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def argumentDestructuring(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ArgumentDestructuringContext)
            else:
                return self.getTypedRuleContext(langParser.ArgumentDestructuringContext,i)


        def getRuleIndex(self):
            return langParser.RULE_argumentDestructurings

        def enterRule(self, listener):
            if hasattr(listener, "enterArgumentDestructurings"):
                listener.enterArgumentDestructurings(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArgumentDestructurings"):
                listener.exitArgumentDestructurings(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitArgumentDestructurings"):
                return visitor.visitArgumentDestructurings(self)
            else:
                return visitor.visitChildren(self)




    def argumentDestructurings(self):

        localctx = langParser.ArgumentDestructuringsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argumentDestructurings)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.argumentDestructuring()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==langParser.T__1:
                self.state = 121
                self.match(langParser.T__1)
                self.state = 122
                self.argumentDestructuring()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentDestructuringContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.ArgumentDestructuringContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def getRuleIndex(self):
            return langParser.RULE_argumentDestructuring

        def enterRule(self, listener):
            if hasattr(listener, "enterArgumentDestructuring"):
                listener.enterArgumentDestructuring(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArgumentDestructuring"):
                listener.exitArgumentDestructuring(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitArgumentDestructuring"):
                return visitor.visitArgumentDestructuring(self)
            else:
                return visitor.visitChildren(self)




    def argumentDestructuring(self):

        localctx = langParser.ArgumentDestructuringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argumentDestructuring)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.expression(0)
            self.state = 129
            self.match(langParser.SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymbolInitializationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.SymbolInitializationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_symbolInitialization

        def enterRule(self, listener):
            if hasattr(listener, "enterSymbolInitialization"):
                listener.enterSymbolInitialization(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSymbolInitialization"):
                listener.exitSymbolInitialization(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSymbolInitialization"):
                return visitor.visitSymbolInitialization(self)
            else:
                return visitor.visitChildren(self)




    def symbolInitialization(self):

        localctx = langParser.SymbolInitializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_symbolInitialization)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(langParser.SYMBOL)
            self.state = 132
            self.match(langParser.T__14)
            self.state = 133
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentOrInitializationLvalueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.AssignmentOrInitializationLvalueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_assignmentOrInitializationLvalue

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignmentOrInitializationLvalue"):
                listener.enterAssignmentOrInitializationLvalue(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignmentOrInitializationLvalue"):
                listener.exitAssignmentOrInitializationLvalue(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAssignmentOrInitializationLvalue"):
                return visitor.visitAssignmentOrInitializationLvalue(self)
            else:
                return visitor.visitChildren(self)




    def assignmentOrInitializationLvalue(self):

        localctx = langParser.AssignmentOrInitializationLvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignmentOrInitializationLvalue)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(langParser.SYMBOL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.expression(0)
                self.state = 137
                self.match(langParser.SYMBOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodeBlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(langParser.CodeBlockContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_codeBlock

     
        def copyFrom(self, ctx):
            super(langParser.CodeBlockContext, self).copyFrom(ctx)



    class ToFunctionStatementContext(CodeBlockContext):

        def __init__(self, parser, ctx): # actually a langParser.CodeBlockContext)
            super(langParser.ToFunctionStatementContext, self).__init__(parser)
            self.copyFrom(ctx)

        def function(self):
            return self.getTypedRuleContext(langParser.FunctionContext,0)

        def codeBlock(self):
            return self.getTypedRuleContext(langParser.CodeBlockContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterToFunctionStatement"):
                listener.enterToFunctionStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitToFunctionStatement"):
                listener.exitToFunctionStatement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitToFunctionStatement"):
                return visitor.visitToFunctionStatement(self)
            else:
                return visitor.visitChildren(self)


    class LocalVariableDeclarationContext(CodeBlockContext):

        def __init__(self, parser, ctx): # actually a langParser.CodeBlockContext)
            super(langParser.LocalVariableDeclarationContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)

        def symbolInitialization(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.SymbolInitializationContext)
            else:
                return self.getTypedRuleContext(langParser.SymbolInitializationContext,i)

        def codeBlock(self):
            return self.getTypedRuleContext(langParser.CodeBlockContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterLocalVariableDeclaration"):
                listener.enterLocalVariableDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLocalVariableDeclaration"):
                listener.exitLocalVariableDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLocalVariableDeclaration"):
                return visitor.visitLocalVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class ToDestructuringContext(CodeBlockContext):

        def __init__(self, parser, ctx): # actually a langParser.CodeBlockContext)
            super(langParser.ToDestructuringContext, self).__init__(parser)
            self.copyFrom(ctx)

        def destructuring(self):
            return self.getTypedRuleContext(langParser.DestructuringContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterToDestructuring"):
                listener.enterToDestructuring(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitToDestructuring"):
                listener.exitToDestructuring(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitToDestructuring"):
                return visitor.visitToDestructuring(self)
            else:
                return visitor.visitChildren(self)


    class ToExpressionContext(CodeBlockContext):

        def __init__(self, parser, ctx): # actually a langParser.CodeBlockContext)
            super(langParser.ToExpressionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(langParser.ExpressionContext,i)

        def codeBlock(self):
            return self.getTypedRuleContext(langParser.CodeBlockContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterToExpression"):
                listener.enterToExpression(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitToExpression"):
                listener.exitToExpression(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitToExpression"):
                return visitor.visitToExpression(self)
            else:
                return visitor.visitChildren(self)


    class StaticValueDeclarationContext(CodeBlockContext):

        def __init__(self, parser, ctx): # actually a langParser.CodeBlockContext)
            super(langParser.StaticValueDeclarationContext, self).__init__(parser)
            self.copyFrom(ctx)

        def symbolInitialization(self):
            return self.getTypedRuleContext(langParser.SymbolInitializationContext,0)

        def codeBlock(self):
            return self.getTypedRuleContext(langParser.CodeBlockContext,0)


        def enterRule(self, listener):
            if hasattr(listener, "enterStaticValueDeclaration"):
                listener.enterStaticValueDeclaration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStaticValueDeclaration"):
                listener.exitStaticValueDeclaration(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStaticValueDeclaration"):
                return visitor.visitStaticValueDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class TypedefContext(CodeBlockContext):
